# vscode-torizon-templates

./: .gitignore  CONTRIBUTING.md  DEPRECATED.md  README.md  cspell.json  deprecatedTemplates.json  templates.json
.github/workflows/: build-and-publish.yaml  build-ccpp.yaml  build-debug-ccpp.yaml  build-debug-python.yaml  build-debug-rust.yaml  build-publish-torizon-dev.yaml  build-python.yaml  build-rust.yaml  ci-tests.yaml  publish-torizon-utils.yaml
aspnetBlazor/: Dockerfile  Dockerfile.debug  docker-compose.yml
aspnetBlazor/.conf/: update.json
assets/github/workflows/: build-application.yaml
assets/json/: torizonPackages.json
assets/tasks/: common.json
cConsole/: Dockerfile
cLvgl/: CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk  docker-compose.yml
cLvgl/.conf/: deps.json
cLvgl/.doc/: README.md
cLvgl/src/: lv_conf.h  main.c
cmakeConsole/: Dockerfile  Dockerfile.debug  Dockerfile.sdk
cmakeConsole/.doc/: README.md
cmakeGTK3/: CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk
cmakeGTK3/.conf/: deps.json
cmakeGTK3/.doc/: README.md
cmakeGTK3/src/: main.cpp
cmakeGTK4/: CMakeLists.txt  Dockerfile  Dockerfile.debug  Dockerfile.sdk  docker-compose.yml
cmakeGTK4/.conf/: deps.json
cmakeGTK4/.doc/: README.md
cmakeGTK4/src/: main.cpp
cppConsole/: Dockerfile  Dockerfile.debug  Dockerfile.sdk
cppConsole/.doc/: README.md
cppQML/: Dockerfile  Dockerfile.debug  Dockerfile.sdk  docker-compose.yml
cppSlint/: Dockerfile  Dockerfile.debug  Dockerfile.sdk
dartFlutter/: Dockerfile  Dockerfile.debug  Dockerfile.sdk  docker-compose.yml  run.sh
dartFlutter/.conf/: deps.json  update.json
dartFlutter/elinux/: CMakeLists.txt
dartFlutter/sample/: pubspec.yaml
dotnetAvalonia/: Dockerfile  Dockerfile.debug  Program.cs  docker-compose.yml
dotnetAvalonia/.conf/: update.json
dotnetAvaloniaFrameBuffer/: Dockerfile  Dockerfile.debug
dotnetAvaloniaFrameBuffer/.conf/: update.json
dotnetConsole/: Dockerfile  Dockerfile.debug
dotnetSlint/: Dockerfile
dotnetSlint/.conf/: update.json
dotnetUno5/: Dockerfile
dotnetUno5/.conf/: update.json
dotnetUno5FrameBuffer/: Dockerfile
dotnetUno5FrameBuffer/.conf/: update.json
genericTemplate/: Dockerfile
nodeJSTypeScript/: Dockerfile  Dockerfile.debug  tsconfig.json
python3Console/: Dockerfile  Dockerfile.debug
rustConsole/: Dockerfile
rustSlint/: Cargo.toml  Dockerfile  Dockerfile.debug  Dockerfile.sdk
scripts/: apply-device-tree-overlay.xsh  build-internal-containers.xsh  check-ci-env.xsh  check-deps.xsh  checkCIEnv.xsh  checkDeps.xsh  connect-device.xsh  create-docker-compose-production.xsh  create-from-template-it.xsh  create-from-template.xsh  createDockerComposeProduction.ps1  createDockerComposeProduction.xsh  createFromTemplate.ps1  init-workspace.xsh  initWorkspace.ps1  project-updater.xsh  projectUpdater.ps1  run-container-if-not-exists.xsh  runContainerIfNotExists.xsh  share-wsl-ports.xsh  shareWSLPorts.xsh  target-list-applied-device-tree-overlays.xsh  target-list-device-tree-overlays.xsh  tasks.xsh  torizon-io.xsh  torizon-packages.xsh  torizonIO.xsh  torizonPackages.xsh  updateSettingsFields.ps1  valid-new-line.xsh  validate-deps-running.xsh  validate-json.xsh  validateDepsRunning.xsh  xonsh-wrapper.xsh  zygote.xsh
scripts/bash/: setup-xonsh-dev.sh  setup-xonsh.sh  tcb-env-setup.sh  tcd-completion.bash  tcd-env-setup.sh
scripts/container/: Containerfile.dev  Containerfile.tasks  Containerfile.wrapper  Containerfile.xonsh  docker-compose.yml
scripts/installDepsScripts/: installDotnetSDK7.sh  installDotnetSDK8.sh
scripts/node/: apollox-0.2.1.tgz  connectNetworkDevice.mjs  package-lock.json  package.json  scanNetworkDevices.mjs
scripts/utils/pip/: LICENSE  README.md  pyproject.toml
scripts/utils/pip/torizon_templates_utils/: animations.py  args.py  colors.py  debug.py  errors.py  network.py  tasks.py
tcb/.conf/: bashrc.tcb  update.json
zigConsole/: .gitignore  Dockerfile  Dockerfile.debug  Dockerfile.sdk  build.zig
zigConsole/src/: main.zig
