[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torizon_templates_utils"
version = "0.0.4"
authors = [
  { name="Matheus Castello", email="matheus.castello@toradex.com" },
]
description = "Package with utilities for Torizon Templates scripts"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "torizon-io-api",
    "requests",
    "pyyaml",
    "debugpy"
]

[project.urls]
Homepage = "https://github.com/torizon/vscode-torizon-templates"
Issues = "https://github.com/torizon/vscode-torizon-templates/issues"
